--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,9 @@
 Stemsible Releases
 
+v0.0.5 - 6/19/2015
+
+* Put Author Name on Message cards
+
 v0.0.4 - 6/19/2015
 
 * Support Ajax Write backs to API Server!
