--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,12 @@
 Stemsible Releases
 
+v0.1.0 - TBD
+
+* Introduced Sessions / Logging in and Out
+* Refactored Main out into a Base Parent Class
+* Data Model: Added password to user table
+* Spruce Up: Mock ups for Groups, and Trending Tags
+
 v0.0.7 - 7/11/2015
 
 * Adding User Chooser, to change Logged in User for testing
