Update Release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,7 +2,8 @@ Stemsible Releases
 
 v0.1.0 - TBD
 
-* Introduced Sessions / Logging in and Out
+* Introduced Sessions Login/Logout
+* Introduced User Profile Page
 * Refactored Main out into a Base Parent Class
 * Data Model: Added password to user table
 * Spruce Up: Mock ups for Groups, and Trending Tags
