--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,9 @@
 Stemsible Releases
 
+v0.1.1 - TBD
+
+* Refactored left and right panels
+
 v0.1.0 - 10/24/2015
 
 * Introduced Sessions Login/Logout
