Add Like Functionality

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,9 @@
 Stemsible Releases
 
+v0.3.0 - 01/07/2015
+
+* Users can now 'Like' other users messages
+
 v0.2.1 - 11/21/2015
 
 * Style changes and clean up
