--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,10 @@
 Stemsible Releases
 
+v0.5.1 - 01/26/2016
+
+* Added 250 Schools from Loudoun and Fairfax, VA counties
+* Data Model: Added unique constraint on School Name
+
 v0.5.0 - 01/18/2016
 
 * Support Commenting on Messages.
