--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,5 +1,9 @@
 Stemsible Releases
 
+v0.7.0 - 6/24/2016
+
+* A new and nicer Home page
+
 v0.6.0 - 4/24/2016
 
 * Profile Revamp - now allows school add/del.
